--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,24 +3,26 @@
 :root {
    --numDays: 7;
    --numHours: 16;
-   --timeHeight: 5.5vh;
+   --timeHeight: 6vh;
    --calBgColor: #fff1f8;
    --eventBorderColor: #f2d3d8;
-   --eventColor1: #ffd6d1;
-   --eventColor2: #fafaa3;
-   --eventColor3: #e2f8ff;
-   --eventColor4: #d1ffe6;
+   --pink: #ffd6d1;
+   --yellow: #fafaa3;
+   --blue: #e2f8ff;
+   --green: #d1ffe6;
 }
+
+$numHours: 16;
 
 @function get-event-color($type) {
    @if $type == 'pink' {
-      @return var(--eventColor1);
+      @return var(--pink);
    } @else if $type == 'yellow' {
-      @return var(--eventColor2);
+      @return var(--yellow);
    } @else if $type == 'blue' {
-      @return var(--eventColor3);
+      @return var(--blue);
    } @else if $type == 'green' {
-      @return var(--eventColor4);
+      @return var(--green);
    } @else {
       @return white;
    }
@@ -41,6 +43,120 @@
 
 p {
    margin: 0;
+}
+
+.modal {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background: rgba(0, 0, 0, 0.5);
+   backdrop-filter: blur(5px);
+   opacity: 0;
+   visibility: hidden;
+   transition:
+      opacity 0.3s ease,
+      visibility 0.3s ease;
+   z-index: 1000;
+
+   &__overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: transparent;
+   }
+
+   &__time {
+      display: flex;
+      justify-content: space-between;
+   }
+
+   &__content {
+      position: relative;
+      background: white;
+      padding: 1.15rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      transform: translateY(100px);
+      transition: transform 0.3s ease;
+      width: 400px; // Увеличиваем ширину
+      max-width: 90%; // Ограничиваем максимальную ширину
+   }
+
+   &__title {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+   }
+
+   &__body {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+   }
+
+   &__input,
+   &__textarea,
+   &__select {
+      //width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+   }
+
+   &__textarea {
+      resize: vertical;
+      min-height: 5rem;
+      max-height: 15rem;
+   }
+
+   &__footer {
+      display: flex;
+      justify-content: flex-end;
+      gap: 1rem;
+      margin-top: 1rem;
+
+      &--label {
+         font-size: 0.85rem;
+      }
+
+      &--time {
+         display: flex;
+         flex-direction: row;
+         gap: 0.5rem;
+      }
+   }
+
+   &__button {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+
+      &--save {
+         background: #4caf50;
+         color: white;
+      }
+
+      &--close {
+         background: #f44336;
+         color: white;
+      }
+   }
+
+   &--open {
+      opacity: 1;
+      visibility: visible;
+
+      & .modal__content {
+         transform: translateY(0);
+      }
+   }
 }
 
 .calendar {
@@ -137,7 +253,7 @@ p {
          font-size: 0.8rem;
          width: 100%;
          max-height: 100px;
-         padding-top: 2.5rem; // Добавляем отступ сверху для числа
+         padding-top: 2.5rem;
          padding-bottom: 0.5rem;
       }
    }
@@ -148,10 +264,30 @@ p {
       padding: 0.5rem;
       margin: 0.1rem 0.5rem;
       background: white;
+      max-width: 100%;
+      overflow: hidden;
+      position: relative;
+
+      &--completed {
+         opacity: 0.35;
+      }
+
+      &--description {
+         padding: 0.3rem;
+         padding-top: 0;
+         white-space: normal;
+         overflow: hidden;
+         text-overflow: ellipsis;
+         font-weight: 400;
+         font-size: 0.9rem;
+      }
 
       &--title {
          font-weight: 600;
          padding: 0.25rem;
+         white-space: normal;
+         overflow: hidden;
+         text-overflow: ellipsis;
       }
 
       &--time {
@@ -166,103 +302,29 @@ p {
          font-size: 0.8rem;
       }
 
-      &--start-8 {
-         grid-row-start: 1;
-      } // 8:00
-      &--start-9 {
-         grid-row-start: 2;
-      } // 9:00
-      &--start-10 {
-         grid-row-start: 3;
-      } // 10:00
-      &--start-11 {
-         grid-row-start: 4;
-      } // 11:00
-      &--start-12 {
-         grid-row-start: 5;
-      } // 12:00
-      &--start-13 {
-         grid-row-start: 6;
-      } // 13:00
-      &--start-14 {
-         grid-row-start: 7;
-      } // 14:00
-      &--start-15 {
-         grid-row-start: 8;
-      } // 15:00
-      &--start-16 {
-         grid-row-start: 9;
-      } // 16:00
-      &--start-17 {
-         grid-row-start: 10;
-      } // 17:00
-      &--start-18 {
-         grid-row-start: 11;
-      } // 18:00
-      &--start-19 {
-         grid-row-start: 12;
-      } // 19:00
-      &--start-20 {
-         grid-row-start: 13;
-      } // 20:00
-      &--start-21 {
-         grid-row-start: 14;
-      } // 21:00
-      &--start-22 {
-         grid-row-start: 15;
-      } // 22:00
-      &--start-23 {
-         grid-row-start: 16;
-      } // 23:00
+      &-gradient {
+         content: '';
+         position: absolute;
+         bottom: 0;
+         left: 0;
+         right: 0;
+         height: 30px; // Высота градиента
+         background: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0),
+            white
+         ); // Градиент от прозрачного к белому
+         pointer-events: none; // Чтобы градиент не блокировал клики по событиям
+      }
 
-      &--end-9 {
-         grid-row-end: 2;
-      } // 9:00
-      &--end-10 {
-         grid-row-end: 3;
-      } // 10:00
-      &--end-11 {
-         grid-row-end: 4;
-      } // 11:00
-      &--end-12 {
-         grid-row-end: 5;
-      } // 12:00
-      &--end-13 {
-         grid-row-end: 6;
-      } // 13:00
-      &--end-14 {
-         grid-row-end: 7;
-      } // 14:00
-      &--end-15 {
-         grid-row-end: 8;
-      } // 15:00
-      &--end-16 {
-         grid-row-end: 9;
-      } // 16:00
-      &--end-17 {
-         grid-row-end: 10;
-      } // 17:00
-      &--end-18 {
-         grid-row-end: 11;
-      } // 18:00
-      &--end-19 {
-         grid-row-end: 12;
-      } // 19:00
-      &--end-20 {
-         grid-row-end: 13;
-      } // 20:00
-      &--end-21 {
-         grid-row-end: 14;
-      } // 21:00
-      &--end-22 {
-         grid-row-end: 15;
-      } // 22:00
-      &--end-23 {
-         grid-row-end: 16;
-      } // 23:00
-      &--end-24 {
-         grid-row-end: 17;
-      } // 24:00
+      @for $i from 1 through $numHours {
+         &--start-#{$i + 7} {
+            grid-row-start: #{$i};
+         }
+         &--end-#{$i + 7} {
+            grid-row-end: #{$i};
+         }
+      }
 
       &--pink {
          background: get-event-color('pink');
