--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -164,7 +164,7 @@ p {
    flex-direction: column;
    gap: 20px;
    margin: 2rem;
-   margin-top: 1rem;
+   margin-top: rem;
    overflow: hidden;
 
    &__weekdays--full {
